# Instagram-fake-app-using-C-

./: README.md
__MACOSX/sg/: ._CMakeLists.txt
sg/: CMakeLists.txt  CMakeLists.txt.user.811bd93  CMakeLists.txt.user.f522d9e  apprating.cpp  apprating.h  apprating.ui  blockeduser.cpp  blockeduser.h  blockeduser.ui  blockuser.cpp  blockuser.h  blockuser.ui  codegoc.cpp  deleteaccount.cpp  deleteaccount.h  deleteaccount.ui  follow.cpp  follow.h  follow.ui  follower.cpp  follower.h  follower.ui  following.cpp  following.h  following.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  messages.cpp  messages.h  messages.ui  oldmessages.cpp  oldmessages.h  oldmessages.ui  rateapp.cpp  rateapp.h  (+20 more)
